crates/ar-translate/tests/snapshots/translator_golden__canonical_response_to_openai.snap
---
source: crates/ar-translate/tests/translator_golden.rs
expression: to_openai(&response)
---
{
  "choices": [
    {
      "finish_reason": "stop",
      "index": 0,
      "message": {
        "content": "hello",
        "role": "assistant"
      }
    }
  ],
  "created": 1700000000,
  "id": "chatcmpl-abc",
  "model": "gpt-5.4",
  "object": "chat.completion",
  "usage": {
    "completion_tokens": 3,
    "prompt_tokens": 11,
    "total_tokens": 14
  }
}
