crates/ar-translate/tests/snapshots/translator_golden__carries_image_part.snap
---
source: crates/ar-translate/tests/translator_golden.rs
expression: canonical
---
CanonicalChat {
    model: "m",
    messages: [
        Msg {
            role: User,
            content: "",
            media: [
                MediaPart {
                    kind: "image_url",
                    body: Object {
                        "image_url": Object {
                            "url": String("http://x"),
                        },
                    },
                },
            ],
        },
    ],
    temperature: None,
    max_tokens: None,
    stream: false,
}
