crates/ar-translate/tests/snapshots/translator_golden__openai_chat_to_canonical.snap
---
source: crates/ar-translate/tests/translator_golden.rs
expression: canonical
---
CanonicalChat {
    model: "gpt-5.4",
    messages: [
        Msg {
            role: System,
            content: "be terse",
            media: [],
        },
        Msg {
            role: User,
            content: "hello\nagain",
            media: [],
        },
        Msg {
            role: Assistant,
            content: "hi",
            media: [],
        },
        Msg {
            role: Tool,
            content: "42",
            media: [],
        },
    ],
    temperature: Some(
        0.2,
    ),
    max_tokens: Some(
        256,
    ),
    stream: true,
}
