crates/ar-translate/tests/snapshots/translator_golden__rejects_part_when_modality_unknown.snap
---
source: crates/ar-translate/tests/translator_golden.rs
expression: err
---
UnsupportedPart {
    kind: "realtime_audio",
}
